[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI_logic/Credits_logic.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/UI_themes/Default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Fonts/MAGNETOB.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 352, 224 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -53.0
margin_right = 200.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "Game by Tenseven"
align = 1

[node name="Control4" type="Control" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 400.0
margin_bottom = 19.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control5" type="Control" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 400.0
margin_bottom = 23.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 400.0
margin_bottom = 42.0
theme = ExtResource( 2 )
text = "Come join my official gamedev server!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 67.0

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/CenterContainer"]
margin_left = 130.0
margin_right = 269.0
margin_bottom = 21.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.901961, 0.282353, 0.180392, 1 )
custom_colors/font_color = Color( 0.901961, 0.282353, 0.180392, 1 )
custom_fonts/font = SubResource( 1 )
text = "Click here!"
underline = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 400.0
margin_bottom = 72.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 400.0
margin_bottom = 76.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 400.0
margin_bottom = 81.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 400.0
margin_bottom = 106.0
theme = ExtResource( 2 )
text = "Back"

[node name="Appear" type="Tween" parent="."]

[node name="Disappear" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/CenterContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="tween_all_completed" from="Disappear" to="." method="_on_Disappear_tween_all_completed"]
